--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,8 @@ body {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 50px;
+    width: 50px;
+    height: 60px;
     border: 1px solid #ccc;
     background-color: #fff;
     cursor: pointer;
@@ -90,6 +90,11 @@ body {
 
 .key.absent {
     background-color: #787c7e;
+    color: white;
+}
+
+.delete-key {
+    background-color: #ff4d4d;
     color: white;
 }
 
